objects/ssot__CourseOfrPtcpActivityGrade__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivityType__c</fullName>
        <label>Activity Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CourseOfferingRubricId__c</fullName>
        <label>Course Offering Rubric</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Course Offering Ptcp Activity Grade Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsInProgress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsIncomplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Incomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsLate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Late</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsMissing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Missing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LetterGradeText__c</fullName>
        <label>Letter Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumMarksNumber__c</fullName>
        <label>Maximum Marks</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PercentileRankPercent__c</fullName>
        <label>Percentile Rank</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ScoreDate__c</fullName>
        <label>Score Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ScoreNumber__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ScoreStatus__c</fullName>
        <label>Score Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1722508388979_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CourseOfrPtcpActivityGrade_CourseOff_rel</label>
        <referenceTo>ssot__CourseOfferingRubric__dlm</referenceTo>
        <relationshipLabel>CourseOfrPtcpActivityGrade_CourseOff_rel</relationshipLabel>
        <relationshipName>rel_1722508388979_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>